--- a/couseonlineapp_flutter/pubspec.yaml
+++ b/couseonlineapp_flutter/pubspec.yaml
@@ -48,9 +48,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - couseonlineapp_flutter/assets/icons
+    - couseonlineapp_flutter/assets/images
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -63,12 +63,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Nunito
+      fonts:
+        - asset: couseonlineapp_flutter/assets/fonts/Nunito/Nunito-Regular.ttf
+        - asset: couseonlineapp_flutter/assets/fonts/Nunito/Nunito-SemiBold.ttf
+          weight : 600
+        - asset: couseonlineapp_flutter/assets/fonts/Nunito/Nunito-Bold.ttf
+          weight : 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
