--- a/couseonlineapp_flutter/pubspec.yaml
+++ b/couseonlineapp_flutter/pubspec.yaml
@@ -49,8 +49,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - couseonlineapp_flutter/assets/icons
-    - couseonlineapp_flutter/assets/images
+    - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
