--- a/couseonlineapp_flutter/pubspec.yaml
+++ b/couseonlineapp_flutter/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
 
   flutter_staggered_grid_view: ^0.3.4
-  flutter_svg: ^0.19.2+1
+  flutter_svg: ^0.18.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -66,10 +66,10 @@ flutter:
   fonts:
     - family: Nunito
       fonts:
-        - asset: couseonlineapp_flutter/assets/fonts/Nunito/Nunito-Regular.ttf
-        - asset: couseonlineapp_flutter/assets/fonts/Nunito/Nunito-SemiBold.ttf
+        - asset: assets/fonts/Nunito/Nunito-Regular.ttf
+        - asset: assets/fonts/Nunito/Nunito-SemiBold.ttf
           weight : 600
-        - asset: couseonlineapp_flutter/assets/fonts/Nunito/Nunito-Bold.ttf
+        - asset: assets/fonts/Nunito/Nunito-Bold.ttf
           weight : 700
   #   - family: Trajan Pro
   #     fonts:
